--- a/bmsg-login.html
+++ b/bmsg-login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -9,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="icons8-ハート-32.png">
     <style>
         :root {
             --bmsg-black: #000000;
@@ -26,7 +27,8 @@
             align-items: center;
             justify-content: center;
             margin: 0;
-            transition: background-color 0.3s ease; /* 背景変化用 */
+            transition: background-color 0.3s ease;
+            /* 背景変化用 */
         }
 
         /* ログイン失敗時の背景発光アニメーション */
@@ -35,8 +37,13 @@
         }
 
         @keyframes red-flash {
-            from { background-color: var(--bmsg-black); }
-            to { background-color: #300000; }
+            from {
+                background-color: var(--bmsg-black);
+            }
+
+            to {
+                background-color: #300000;
+            }
         }
 
         .login-card {
@@ -55,17 +62,43 @@
         }
 
         @keyframes shake-anim {
-            10%, 90% { transform: translate3d(-1px, 0, 0); }
-            20%, 80% { transform: translate3d(2px, 0, 0); }
-            30%, 50%, 70% { transform: translate3d(-4px, 0, 0); }
-            40%, 60% { transform: translate3d(4px, 0, 0); }
+
+            10%,
+            90% {
+                transform: translate3d(-1px, 0, 0);
+            }
+
+            20%,
+            80% {
+                transform: translate3d(2px, 0, 0);
+            }
+
+            30%,
+            50%,
+            70% {
+                transform: translate3d(-4px, 0, 0);
+            }
+
+            40%,
+            60% {
+                transform: translate3d(4px, 0, 0);
+            }
         }
 
-        .login-header i { color: var(--pure-white); font-size: 3.5rem; }
+        .login-header i {
+            color: var(--pure-white);
+            font-size: 3.5rem;
+        }
 
-        .form-label { color: var(--pure-white); font-size: 0.85rem; letter-spacing: 1px; }
+        .form-label {
+            color: var(--pure-white);
+            font-size: 0.85rem;
+            letter-spacing: 1px;
+        }
 
-        .password-container { position: relative; }
+        .password-container {
+            position: relative;
+        }
 
         .form-control {
             background-color: #000;
@@ -105,7 +138,10 @@
             margin-top: 10px;
         }
 
-        .btn-login:hover { background-color: var(--bmsg-red); color: white; }
+        .btn-login:hover {
+            background-color: var(--bmsg-red);
+            color: white;
+        }
 
         /* エラーメッセージ */
         .error-msg {
@@ -117,14 +153,47 @@
             text-align: center;
         }
 
-        .divider { display: flex; align-items: center; margin: 30px 0; color: var(--pure-white); font-size: 0.75rem; }
-        .divider::before, .divider::after { content: ''; flex: 1; border-bottom: 1px solid #444; }
-        .divider span { padding: 0 15px; }
+        .divider {
+            display: flex;
+            align-items: center;
+            margin: 30px 0;
+            color: var(--pure-white);
+            font-size: 0.75rem;
+        }
 
-        .btn-social { flex: 1; background: transparent; border: 1px solid #444; color: var(--pure-white); padding: 12px; }
+        .divider::before,
+        .divider::after {
+            content: '';
+            flex: 1;
+            border-bottom: 1px solid #444;
+        }
 
-        a { color: var(--pure-white); text-decoration: underline; text-underline-offset: 4px; }
-        .back-link { position: absolute; top: 20px; left: 20px; text-decoration: none; font-weight: bold; font-size: 0.8rem; }
+        .divider span {
+            padding: 0 15px;
+        }
+
+        .btn-social {
+            flex: 1;
+            background: transparent;
+            border: 1px solid #444;
+            color: var(--pure-white);
+            padding: 12px;
+        }
+
+        a {
+            color: var(--pure-white);
+            text-decoration: underline;
+            text-underline-offset: 4px;
+        }
+
+        .back-link {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 0.8rem;
+        }
     </style>
 </head>
 
@@ -187,7 +256,7 @@
 
         loginForm.addEventListener('submit', function (e) {
             e.preventDefault();
-            
+
             // 演出テスト用に、どんな入力でも一度「失敗」させる設定にしています
             // 演出開始
             document.body.classList.add('auth-error');
@@ -202,4 +271,5 @@
         });
     </script>
 </body>
+
 </html>
