--- a/bmsg-ranking.html
+++ b/bmsg-ranking.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+     <link rel="icon" href="icons8-ハート-32.png">
+
     <style>
         :root {
             --bmsg-black: #111111;
