--- a/bmsg-detail.html
+++ b/bmsg-detail.html
@@ -136,9 +136,9 @@
             </a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="bmsg-song-list.html">作品一覧</a></li>
-                    <li class="nav-item"><a class="nav-link" href="bmsg-mylist.html">マイリスト</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="bmsg-song-list.html">SongList</a></li>
+                    <li class="nav-item"><a class="nav-link" href="bmsg-mylist.html">MyList</a></li>
                 </ul>
                 <a href="#" class="btn btn-outline-light ms-lg-3 rounded-pill px-4">ログイン</a>
             </div>
@@ -254,15 +254,16 @@
         </div>
     </div>
 
-    <footer class="py-5 mt-5 border-top border-secondary border-opacity-25">
+    <footer class="py-5 mt-5">
         <div class="container text-center">
-            <h5 class="fw-bold mb-4">BMSG MUSIC</h5>
-            <div class="d-flex justify-content-center gap-4 mb-4 fs-4">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-youtube"></i></a>
+            <h5 class="fw-bold text-white mb-4">BMSG MUSIC</h5>
+            <div class="d-flex justify-content-center gap-4 mb-4">
+                <a href="#" class="text-white"><i class="bi bi-twitter-x fs-4"></i></a>
+                <a href="#" class="text-white"><i class="bi bi-instagram fs-4"></i></a>
+                <a href="#" class="text-white"><i class="bi bi-youtube fs-4"></i></a>
             </div>
-            <p class="text-white-50 small">&copy; 2026 BMSG MUSIC. All rights reserved.</p>
+            <hr class="border-secondary opacity-25">
+            <p class="small mb-0">&copy; 2026 BMSG MUSIC.</p>
         </div>
     </footer>
 
