--- a/bmsg-login.html
+++ b/bmsg-login.html
@@ -211,13 +211,13 @@
 
         <form id="loginForm">
             <div class="mb-3">
-                <label class="form-label fw-bold">EMAIL ADDRESS</label>
+                <label class="form-label fw-bold">メールアドレス</label>
                 <input type="email" class="form-control" id="email" required>
             </div>
 
             <div class="mb-4">
                 <div class="d-flex justify-content-between align-items-center">
-                    <label class="form-label fw-bold">PASSWORD</label>
+                    <label class="form-label fw-bold">パスワード</label>
                 </div>
                 <div class="password-container mt-1">
                     <input type="password" class="form-control" id="password" required>
@@ -225,7 +225,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-login w-100">LOG IN</button>
+            <button type="submit" class="btn btn-login w-100">ログイン</button>
             <div class="error-msg" id="errorMsg">AUTHENTICATION FAILED. PLEASE TRY AGAIN.</div>
         </form>
 
