--- a/index.html
+++ b/index.html
@@ -270,23 +270,16 @@
         </section>
     </div>
 
-    <footer class="py-5 mt-5">
-        <div class="container text-center text-md-start">
-            <div class="row">
-                <div class="col-md-6 mb-4">
-                    <h5 class="fw-bold text-white"><i class="bi bi-vinyl-fill me-2"></i>BMSG Artist Support</h5>
-                    <p>公式の最新情報やリリーススケジュールをお届けします。</p>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <div class="d-flex gap-4 justify-content-center justify-content-md-end">
-                        <a href="#" class="text-white fs-4"><i class="bi bi-twitter-x"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-youtube"></i></a>
-                    </div>
-                </div>
+   <footer class="py-5 mt-5">
+        <div class="container text-center">
+            <h5 class="fw-bold text-white mb-4">BMSG MUSIC</h5>
+            <div class="d-flex justify-content-center gap-4 mb-4">
+                <a href="#" class="text-white"><i class="bi bi-twitter-x fs-4"></i></a>
+                <a href="#" class="text-white"><i class="bi bi-instagram fs-4"></i></a>
+                <a href="#" class="text-white"><i class="bi bi-youtube fs-4"></i></a>
             </div>
-            <hr class="border-secondary my-4">
-            <p class="text-center mb-0 small">&copy; 2026 BMSG Artist Fan Project. All rights reserved.</p>
+            <hr class="border-secondary opacity-25">
+            <p class="small mb-0">&copy; 2026 BMSG MUSIC.</p>
         </div>
     </footer>
 
