--- a/bmsg-ranking.html
+++ b/bmsg-ranking.html
@@ -180,7 +180,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">
+            <a class="navbar-brand fw-bold" href="index.html">
                 <i class="bi bi-vinyl-fill me-2"></i>BMSG MUSIC
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -322,31 +322,16 @@
         </div>
     </div>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <h5 class="fw-bold mb-3">BMSG MUSIC</h5>
-                </div>
-                <div class="col-md-4 mb-4 text-md-center">
-                    <h5 class="fw-bold mb-3">MENU</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-decoration-none opacity-75">利用規約</a></li>
-                        <li><a href="#" class="text-decoration-none opacity-75">プライバシーポリシー</a></li>
-                        <li><a href="#" class="text-decoration-none opacity-75">お問い合わせ</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4 mb-4 text-md-end">
-                    <h5 class="fw-bold mb-3">FOLLOW US</h5>
-                    <div class="d-flex gap-3 justify-content-md-end">
-                        <a href="#"><i class="bi bi-twitter-x fs-4"></i></a>
-                        <a href="#"><i class="bi bi-instagram fs-4"></i></a>
-                        <a href="#"><i class="bi bi-youtube fs-4"></i></a>
-                    </div>
-                </div>
+    <footer class="py-5 mt-5">
+        <div class="container text-center">
+            <h5 class="fw-bold text-white mb-4">BMSG MUSIC</h5>
+            <div class="d-flex justify-content-center gap-4 mb-4">
+                <a href="#" class="text-white"><i class="bi bi-twitter-x fs-4"></i></a>
+                <a href="#" class="text-white"><i class="bi bi-instagram fs-4"></i></a>
+                <a href="#" class="text-white"><i class="bi bi-youtube fs-4"></i></a>
             </div>
-            <hr class="my-4 border-secondary">
-            <p class="text-center small">&copy; 2026 BMSG MUSIC. All rights reserved.</p>
+            <hr class="border-secondary opacity-25">
+            <p class="small mb-0">&copy; 2026 BMSG MUSIC.</p>
         </div>
     </footer>
 
