--- a/bmsg-signup.html
+++ b/bmsg-signup.html
@@ -150,7 +150,7 @@
             <div class="text-center mb-4">
                 <i class="bi bi-vinyl-fill display-4 text-primary mb-3"></i>
                 <h2 class="fw-bold">BMSG MUSIC</h2>
-                <p class="text-muted">新しいアカウントを作成</p>
+                <p class="text-muted">CREATE NEW ACCOUNT</p>
             </div>
 
             <form id="signupForm">
